// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag dismissable label should render dismissable label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root PicassoLabel-root MuiChip-deletable"
      role="button"
      tabindex="0"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="PicassoLabel-innerLabel"
        >
          Tag
        </span>
      </span>
      <span
        aria-label="delete icon"
        class="PicassoLabel-deleteIcon MuiChip-deleteIcon"
        role="button"
      >
        <svg
          class="PicassoSvgCloseMinor16-root"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders \`blue\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root PicassoLabel-root PicassoLabel-blue"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="PicassoLabel-innerLabel"
        >
          Tag
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag renders \`grey\` variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiChip-root PicassoLabel-root"
    >
      <span
        class="MuiChip-label"
      >
        <span
          class="PicassoLabel-innerLabel"
        >
          Tag
        </span>
      </span>
    </div>
  </div>
</div>
`;
